# Box2D_robo_sim

./: .gitignore  README.md  TODO.md  __init__.py  config.yaml  config_loader.py  env.py  env_new.py  joint_test.py  main.py  policy.py  pyproject.toml  record_video.py  render.py  robot_config.py  simple_test.py  simulation.py
pointcloud/: __init__.py  batch_generate_circles.py  circle_environment_generator.py  create_pointcloud.py  pointcloud_extractor.py  pointcloud_loader.py  random_environment_generator.py
pointcloud/concave_shape_generator/: __init__.py  concave_box2d_integration.py  concave_environment_generator.py  concave_shape_generator.py
pointcloud/data/: clean_env.ply  test_static_env_ply.ply
pointcloud/utils/: __init__.py  quick_visualize.py  svg_to_ply_converter.py  visualize_pointcloud.py
pose/: __init__.py  batch_pose_generator.py  collision_detector.py  pose_pipeline.py  pose_visualizer.py  random_pose_generator.py
